--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.1.0
   http: ^0.13.3
+  flutter_facebook_auth: ^3.5.1
 
 dev_dependencies:
   flutter_test:
